--- a/OnePage/index.html
+++ b/OnePage/index.html
@@ -447,9 +447,11 @@
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>اتصل ألان </h3>
+          <p> واجب علينا جميعا لعدم المساعدة فس تسرب المياه الكشف المبكر والدوري لتسرب المياه اذا لاحظت اي من هذة العلامات يكون بمثابة الوقاية من مخاطر تسرب المياه شركات تسرب المياه موجودة بكثرة في السوق ولكن تحديد مكان التسرب والعمل بحرفية ليست موجودة لدي كل الشركات شركة كشف تسرب المياه يتوفر لديها العمالة المدربة والاجهزة الحديثة لذلك نتميز عن غيرنا في المجال تسرب المياه مشكلة ليست بحديثة ولكن الكشف وتحديد مكان التسرب هو الحديث في هذة الايام نرجوا من الجميع العمل سويا علي الحدمن تسربات المياه شركة كشف تسرب المياه عند تسرب المياه 
+            خصم خاص عند الاصلاح
+            </p>
+          <a class="cta-btn" href="tel:+966501691452">0501691458</a>
         </div>
       </div>
     </section><!-- End Cta Section -->
@@ -459,17 +461,17 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>أعمالنا المنجزه </h2>
+          <p>قائمه من انجازاتنا واعمالنا في مجال السباكه والكهرباء وترسب المياه وايضا الاجهزه المستخدمه </p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">جميع الصور</li>
+              <li data-filter=".filter-app">كشف التسربات</li>
+              <li data-filter=".filter-card">اجهزتنا</li>
+              <li data-filter=".filter-web">اعمال الكهرباء</li>
             </ul>
           </div>
         </div>
@@ -503,6 +505,23 @@
               </div>
             </div>
           </div>
+          
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-109.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 3</h4>
+                <p>Web</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-109.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -554,6 +573,32 @@
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-101.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>App 4</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-101.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-102.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>App 5</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-102.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -707,47 +752,52 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">من الأسباب المؤدية إلى انسداد المجاري العوامل الجوية<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  الأمطار عندما تكون غزيرة تؤدي لحدوث خلل في مجاري الصرف الصحي، نتيجة لامتلاء غرف التفتيش بمياه الأمطار، وتؤدي لعرقلة الطرقات فلابد من حل تلك المشكلة فوراً بالجهات المختصة، لأن تراكم الماء قد يحدث الكثير من الحوادث سواء كانت كهربية أو حدوث غرق لبعض الأشخاص الذين يسيرون في الطريق.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-2" class="collapsed">كشف كهرباء المنزل ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  اكتشاف الأسلاك الكهربائية من خلال مفك البراغي ، وهذا يمكن أن يساعد كثيرًا في تحديد ما إذا كان هذا الخط موصل للكهرباء أم لا عن طريق تشغيل مصباح مفك البراغي عندما يتلامس مع القاطع
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-3" class="collapsed"> فحص تهريب الكهرباء ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  غالبًا ما تجد عيبًا في الأسلاك الكهربائية ، والذي يمكن أن ينتج عن بعض المشاكل الكهربائية المختلفة ، مثل التوصيلات الكهربائية المفكوكة ، أو انقطاع الكبل الكهربائي ، أو تلف المفاتيح الكهربائية 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4" class="collapsed">فحص الكهرباء ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-parent=".faq-list">
-                <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                <p>المساعدة في سداد فاتورة الكهرباء مقابل استهلاكك الفعلي فقط تجنب الأخطار العديدة التي يمكن أن تحدث نتيجة تهريب الكهرباء أو ما يعرف بتسرب الكهرباء.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">فحص التركيبات الكهربائية? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
-                </p>
+                  يتم فحص الأسلاك الكهربائية وتحديد مواقع الأعطال ومعالجتها مع الحرص على فحص الأجزاء التالية بشكل منفصل ، مثل:
+
+                  تحقق من مفتاح الإشعال
+                  امتحان القاطع
+                  تحقق من نقاط الاتصال
+                  افحص المصباح بشكل منفصل
+                  افحص الكابلات والمقابس
+                  بالنسبة لطرق الكشف عن التمديدات الكهربائية ، يمكن استخدام مقياس التيار كإحدى طرق الفحص التي يمكن من خلالها فحص الأحمال الكهربائية عن طريق توصيل الجهاز وتلك الأجزاء ، وإذا كان المؤشر عند الصفر ، فهذا يعني بالضرورة أنه لا هناك أجزاء في تلك الأجزاء.                </p>
               </div>
             </li>
 
@@ -790,7 +840,7 @@
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -819,7 +869,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -830,7 +880,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
+<!-- 
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -878,21 +928,21 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container d-md-flex py-4">
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>OnePage</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Waleed-Ops</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+          Designed by Waleed-Ops</a>
+        <!-- </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -901,7 +951,7 @@
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-    </div>
+    </div> -->
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
